# BoAmps

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  RELEASENOTE.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
Resources/: Functional-Roadmap.excalidraw
db_model/: __init__.py  constants.py
doc/: gen_pages.py  mkdocs.yml
examples/: energy-report-example-1.json  energy-report-example-2.json  energy-report-llm-inference.csv  energy-report-llm-inference.json  example-python-conversion.py  flattened_energy_report.csv  notice  problems.txt  report1.json  report2y7vaarz.json  report8c7sk6w3.json  test.json  tmpcsax2ozj.json
methods/: __init__.py
model/: algorithm_schema.json  dataset_schema.json  hardware_schema.json  report_schema.json
tools/: README.md  converter-cli.py  requirements.txt  test.py
tools/json_generator/python/: .gitignore  README.md  pyproject.toml
tools/json_generator/python/aipms-python/: codecarbon_extractor.py
tools/json_generator/python/validators/: algorithm_schema_validator.py  hardware_schema_validator.py  inference_schema_validator.py
tools/json_generator/small-automation/python/: datamodel_to_tabular.xlsx  pyproject.toml  tests.ipynb
tools/json_generator/small-automation/python/example/: digit_recognition.py  emissions.csv
tools/json_generator/small-automation/python/validators/: algorithm_schema_validator.py  dataset_schema_validator.py  hardware_schema_validator.py  inference_schema_validator.py  measure_schema_validator.py  report_schema_validator.py  schema_validation.py
(+89 files in other folders)
