[tool.poetry]
name = "aipms-python"
version = "0.1.0"
description = ""
authors = ["Samuel Rince <s@rince.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"


[tool.poetry.group.example.dependencies]
scikit-learn = "^1.5.2"
codecarbon = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
